--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,9 +3,17 @@
 	"tasks": [{
 			"type": "shell",
 			"label": "Build",
-			"command": "./scripts/build.bat",
-			"args": ["<part e.g. 18F24K40>", "${workspaceFolderBasename}", "<errata>"],
+			"command": "scripts\\build.bat",
+			"args": ["<part number>", "${workspaceFolderBasename}", "<errata>"],
 			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			},
 			"problemMatcher": [
 				"$gcc"
 			]
@@ -13,9 +21,17 @@
 		{
 			"type": "shell",
 			"label": "Build and Upload",
-			"command": "./scripts/build_upload.bat",
-			"args": ["<part e.g. 18F24K40>", "${workspaceFolderBasename}", "<errata>"],
+			"command": "scripts\\build_upload.bat",
+			"args": ["<part number>", "${workspaceFolderBasename}", "<errata>"],
 			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			},
 			"problemMatcher": [
 				"$gcc"
 			]
@@ -23,9 +39,17 @@
 		{
 			"type": "shell",
 			"label": "Upload",
-			"command": "./scripts/upload.bat",
+			"command": "scripts\\upload.bat",
 			"args": ["${workspaceFolderBasename}"],
 			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			},
 			"problemMatcher": [
 				"$gcc"
 			]
